# 250726-uv-study

./: .gitattributes  .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  test_pkg20.py
.taskfile/: py.yml
pkg/pkg1/: pyproject.toml
pkg/pkg1/src/pkg1/: __init__.py
pkg/pkg10/: pyproject.toml
pkg/pkg10/src/pkg10/: __init__.py
pkg/pkg11/: pyproject.toml
pkg/pkg11/src/pkg11/: __init__.py
pkg/pkg12/: pyproject.toml
pkg/pkg12/src/pkg12/: __init__.py
pkg/pkg2/: pyproject.toml
pkg/pkg2/src/pkg2/: __init__.py
pkg/pkg3/: pyproject.toml
pkg/pkg3/src/pkg3/: __init__.py
pyproject/demo1/: README.md  main.py  pyproject.toml
pyproject/demo1/demo1/: __init__.py
pyproject/demo1/demo1.egg-info/: PKG-INFO  SOURCES.txt
pyproject/demo2/: main.py  pyproject.toml
pyproject/demo2/demo2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyproject/master/: README.md  main.py  pyproject.toml
pyproject/master/master/: __init__.py  main.py
pyproject/master/master.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyproject/master/scripts/: manage-deps.sh
pyproject/pkg1/: __init__.py  main.py  pyproject.toml
pyproject/pkg2/: main.py  pyproject.toml
pyproject/pkg2/pkg2/: __init__.py
pyproject/pkg3/: pyproject.toml
pyproject/pkg3/pkg3/: __init__.py  main.py
pyproject/pkg4/: main.py  pyproject.toml
