[project]
name = "250726-uv-study-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pkg10",
  "py-uv-study-pkg20-250726 @ git+https://github.com/lwmacct/250726-uv-study-pkg20.git@v0.0.8",
]

[tool.uv.workspace]
members = ["pkg/pkg10", "pkg/pkg11", "pkg/pkg12"]


[tool.uv.sources]
pkg10 = { workspace = true }
pkg11 = { workspace = true }
pkg12 = { workspace = true }
