[project]
name = "250726-uv-study-master"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pkg10",
  "pkgs @ git+https://github.com/lwmacct/250726-uv-study-pkgs.git",
]

[tool.uv.workspace]
members = ["pkg/pkg10", "pkg/pkg11", "pkg/pkg12"]


[tool.uv.sources]
pkg10 = { workspace = true }
pkg11 = { workspace = true }
pkg12 = { workspace = true }
pkgs = { git = "https://github.com/lwmacct/250726-uv-study-pkgs.git" }
