[project]
name = "pkg1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "lwmacct", email = "lwmacct@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    # 方式1：独立使用时，使用完整的 Git 地址
    "pkg2 @ git+https://github.com/lwmacct/250726-uv-study.git@main#subdirectory=pkg/pkg2",
    "requests @ git+https://github.com/psf/requests.git@v2.30.0",

]


[project.scripts]
pkg1 = "pkg1:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
