[project]
name = "master"
version = "0.1.2"
description = "Master application using pkg3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pkg3 @ git+https://github.com/lwmacct/250726-uv-study.git@f482a44#subdirectory=pyproject/pkg3",
]
authors = [{ name = "Demo Author", email = "demo@example.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["master"]

[tool.hatch.metadata]
allow-direct-references = true
