[project]
name = "pkg1"
version = "0.1.0"
description = "Package 1 - Utility functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Demo Author", email = "demo@example.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg1"]
