[project]
name = "pkg2"
version = "0.1.0"
description = "Package 2 - Data processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Demo Author", email = "demo@example.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg2"]
