[project]
name = "pkg3"
version = "0.1.0"
description = "Package 3 - Business logic using pkg1 and pkg2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pkg1 @ git+ssh://git@github.com/lwmacct/250726-uv-study.git#subdirectory=pyproject/pkg1",
  "pkg2 @ git+ssh://git@github.com/lwmacct/250726-uv-study.git#subdirectory=pyproject/pkg2",
]
authors = [{ name = "Demo Author", email = "demo@example.com" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg3"]

[tool.hatch.metadata]
allow-direct-references = true
